--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+::selection {
+  background-color: #46d729;
+}
+
+.dark {
+  background-color: black;
+}
