--- a/app/globals.css
+++ b/app/globals.css
@@ -14,3 +14,12 @@
 .dark {
   background-color: black;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
